// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notation cumulus 1`] = `
"Pattern 3

Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|OO-O|----|---O|X-O-|OO-O|---O|X-OX|-OX-|

Snare 1

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|X---|----|X--X|----|X---|-X--|X--X|

Snare 2

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|X---|----|X--X|----|X---|X--X|--X-|

Tom

|1---|2---|3---|4---|5---|6---|7---|8---|
|O-O-|--OO|--O-|OOO-|O-O-|--O-|X-OX|-OX-|

Pattern 1

Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|X---|O-OO|O---|X---|O-OO|O---|X-O-|XO--|

Snare 1

|1---|2---|3---|4---|5---|6---|7---|8---|
|XX-X|-X--|--XX|XX-X|-X--|--XX|X--X|--X-|

Snare 2

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|XX--|----|----|XX--|X--X|--X-|

Tom

|1---|2---|3---|4---|5---|6---|7---|8---|
|OOOO|----|O---|O-OO|O---|----|OOO-|O---|

Pattern 5

Bass

|1---|2---|3---|4---|5---|6---|7---|8---|9---|0---|1---|2---|3---|4---|5---|6---|
|O--X|--O-|-X--|O--O|--X-|-O--|O-OX|-OO-|O--X|--O-|-X--|O-OX|-X--|O-OX|-X-O|X---|

Snare 1

|1---|2---|3---|4---|5---|6---|7---|8---|9---|0---|1---|2---|3---|4---|5---|6---|
|---X|----|-X--|----|--X-|----|---X|----|--X-|----|X---|---X|-X--|---X|-X--|XXX-|

Snare 2

|1---|2---|3---|4---|5---|6---|7---|8---|9---|0---|1---|2---|3---|4---|5---|6---|
|---X|----|-X--|----|--X-|----|----|X---|---X|----|-X--|---X|-X--|---X|-X--|XXX-|

Tom

|1---|2---|3---|4---|5---|6---|7---|8---|9---|0---|1---|2---|3---|4---|5---|6---|
|OOOX|--OO|OX--|O-OO|-OX-|OO-O|O-OX|-OO-|OOOX|--OO|OX--|O-OX|-X--|OOOX|-X-O|X---|

Break

Bass

|1---|2---|3---|4---|5---|6---|
|OOOX|--OO|OX--|OOOX|--OO|OX--|

Snare 1

|1---|2---|3---|4---|5---|6---|
|---X|----|-X--|---X|----|-X--|

Snare 2

|1---|2---|3---|4---|5---|6---|
|---X|----|-X--|---X|----|-X--|

Tom

|1---|2---|3---|4---|5---|6---|
|OOOX|--OO|OX--|OOOX|--OO|OX--|

Pattern 6

Bass

|1-----|2-----|3-----|4-----|5-----|6-----|
|OOOOOO|X--OOO|OOOX--|OOOOOO|X--OOO|X-X-X-|

Snare 1

|1-----|2-----|3-----|4-----|5-----|6-----|
|------|------|------|------|------|------|

Snare 2

|1-----|2-----|3-----|4-----|5-----|6-----|
|------|------|------|------|------|------|

Tom

|1-----|2-----|3-----|4-----|5-----|6-----|
|------|------|------|------|------|------|

Pattern 7

Bass

|1|2|3|4|
|-|-|-|-|

Snare 1

|1|2|3|4|
|-|-|-|-|

Snare 2

|1|2|3|4|
|-|-|-|-|

Tom

|1|2|3|4|
|-|-|-|-|

Pattern 8

Bass

|1|2|3|4|
|-|-|-|-|

Snare 1

|1|2|3|4|
|-|-|-|-|

Snare 2

|1|2|3|4|
|-|-|-|-|

Tom

|1|2|3|4|
|-|-|-|-|

Pattern 9

Bass

|1|2|3|4|
|-|-|-|-|

Snare 1

|1|2|3|4|
|-|-|-|-|

Snare 2

|1|2|3|4|
|-|-|-|-|

Tom

|1|2|3|4|
|-|-|-|-|

Pattern 10

Bass

|1|2|3|4|
|-|-|-|-|

Snare 1

|1|2|3|4|
|-|-|-|-|

Snare 2

|1|2|3|4|
|-|-|-|-|

Tom

|1|2|3|4|
|-|-|-|-|

"
`;

exports[`notation garlic 1`] = `
"===== 2mG =====

Bottom Bass

|1|2|3|4|
|-|-|-|-|

Mid Bass

|1|2|3|4|
|-|-|-|-|

Shaker

|1|2|3|4|
|-|-|-|-|

Snare

|1|2|3|4|
|-|-|-|-|

Djembe

|1|2|3|4|
|-|-|-|-|

1-a

Bottom Bass

|1-|2-|3-|4-|5-|6-|7-|
|O-|XO|-O|-O|O-|O-|O-|

Mid Bass

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Shaker

|1-|2-|3-|4-|5-|6-|7-|
|XX|XX|-X|-X|--|-X|XX|

Snare

|1-|2-|3-|4-|5-|6-|7-|
|--|X-|-X|-X|--|--|--|

Djembe

|1-|2-|3-|4-|5-|6-|7-|
|O-|t-|O-|-t|-t|-t|tO|

1-b

Bottom Bass

|1-|2-|3-|4-|5-|6-|7-|
|O-|XO|-X|O-|XO|O-|O-|

Mid Bass

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Shaker

|1-|2-|3-|4-|5-|6-|7-|
|XX|XX|-X|XX|-X|-X|-X|

Snare

|1-|2-|3-|4-|5-|6-|7-|
|--|X-|-X|-X|-X|X-|-X|

Djembe

|1-|2-|3-|4-|5-|6-|7-|
|Ot|tO|-O|-O|--|-t|tO|

2

Bottom Bass

|1-|2-|3-|4-|5-|6-|7-|8-|9-|0-|1-|2-|3-|4-|
|OO|XO|O-|X-|O-|XO|--|O-|OO|O-|X-|O-|XO|--|

Mid Bass

|1-|2-|3-|4-|5-|6-|7-|8-|9-|0-|1-|2-|3-|4-|
|--|--|--|--|--|--|--|--|--|--|--|--|--|--|

Shaker

|1-|2-|3-|4-|5-|6-|7-|8-|9-|0-|1-|2-|3-|4-|
|X-|XX|X-|XX|X-|XX|XX|X-|XX|X-|XX|X-|XX|XX|

Snare

|1-|2-|3-|4-|5-|6-|7-|8-|9-|0-|1-|2-|3-|4-|
|--|X-|--|X-|--|X-|XX|--|X-|--|X-|--|X-|XX|

Djembe

|1-|2-|3-|4-|5-|6-|7-|8-|9-|0-|1-|2-|3-|4-|
|Ot|SO|tS|--|Ot|SO|S-|Ot|SO|tS|--|Ot|SO|S-|

Acropolice

Bottom Bass

|1-|2-|3-|4-|5-|6-|7-|
|O-|OX|-X|O-|O-|X-|X-|

Mid Bass

|1-|2-|3-|4-|5-|6-|7-|
|OO|OO|-O|O-|OO|O-|O-|

Shaker

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Snare

|1-|2-|3-|4-|5-|6-|7-|
|X-|-X|-X|--|--|X-|--|

Djembe

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

break1-v2

Bottom Bass

|1-|2-|3-|4-|5-|6-|7-|
|O-|XO|-X|O-|XO|-X|OX|

Mid Bass

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Shaker

|1-|2-|3-|4-|5-|6-|7-|
|--|X-|-X|--|X-|-X|XX|

Snare

|1-|2-|3-|4-|5-|6-|7-|
|--|X-|-X|--|X-|-X|-X|

Djembe

|1-|2-|3-|4-|5-|6-|7-|
|O-|tO|-t|O-|tO|-t|Ot|

break2

Bottom Bass

|1-|2-|3-|4-|5-|6-|7-|
|OO|-O|O-|OO|-O|O-|OO|

Mid Bass

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Shaker

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Snare

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Djembe

|1-|2-|3-|4-|5-|6-|7-|
|OO|-O|O-|OO|-O|O-|OO|

"
`;

exports[`notation kuva 1`] = `
"= kivakovakivikuva =

Bottom Bass

|1|2|3|4|
|-|-|-|-|

Mid Bass

|1|2|3|4|
|-|-|-|-|

Shaker

|1|2|3|4|
|-|-|-|-|

Snare

|1|2|3|4|
|-|-|-|-|

Djembe

|1|2|3|4|
|-|-|-|-|

k-1

Bottom Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|O-O-|XO--|X---|X---|O-O-|XO--|O-XO|--X-|

Mid Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|X-X-|X-XO|XOO-|O---|X-X-|X--O|O-XO|--X-|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|XXXX|X-X-|----|XXX-|X-X-|--X-|XX-X|X-XX|

Snare

|1---|2---|3---|4---|5---|6---|7---|8---|
|--X-|X---|----|X--X|--X-|X-X-|----|X-XX|

Djembe

|1---|2---|3---|4---|5---|6---|7---|8---|
|t-tt|t-S-|--O-|O---|t-O-|tO-t|O-tO|--S-|

fast-offs

Bottom Bass

|1-|2-|3-|4-|5-|6-|7-|8-|
|--|--|--|--|--|--|--|--|

Mid Bass

|1-|2-|3-|4-|5-|6-|7-|8-|
|--|--|--|--|--|--|--|--|

Shaker

|1-|2-|3-|4-|5-|6-|7-|8-|
|--|--|--|--|--|--|--|--|

Snare

|1-|2-|3-|4-|5-|6-|7-|8-|
|-X|-X|-X|-X|-X|-X|-X|-X|

Djembe

|1-|2-|3-|4-|5-|6-|7-|8-|
|--|--|--|--|--|--|--|--|

slow offs

Bottom Bass

|1|2|3|4|5|6|7|8|
|-|-|-|-|-|-|-|-|

Mid Bass

|1|2|3|4|5|6|7|8|
|-|-|-|-|-|-|-|-|

Shaker

|1|2|3|4|5|6|7|8|
|-|-|-|-|-|-|-|-|

Snare

|1|2|3|4|5|6|7|8|
|-|X|-|X|-|X|-|X|

Djembe

|1|2|3|4|5|6|7|8|
|-|-|-|-|-|-|-|-|

k-1-bass

Bottom Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|O-O-|XO--|X---|X---|O-O-|XO--|O-XO|--X-|

Mid Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

k-1-midbass

Bottom Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Mid Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|X-X-|X-XO|XOO-|O---|X-X-|X--O|O-XO|--X-|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

k-1-sn

Bottom Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Mid Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare

|1---|2---|3---|4---|5---|6---|7---|8---|
|--X-|X---|----|X--X|--X-|X-X-|----|X-XX|

Djembe

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

k-1-djembe

Bottom Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Mid Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe

|1---|2---|3---|4---|5---|6---|7---|8---|
|t-tt|t-S-|--O-|O---|t-O-|tO-t|O-tO|--S-|

k-1-shaker

Bottom Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Mid Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|XXXX|X-X-|----|XXX-|X-X-|--X-|XX-X|X-XX|

Snare

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

k-2

Bottom Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|OOO-|X---|X---|X-OO|O---|X---|X---|X---|

Mid Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|OOO-|X---|X---|X-OO|O---|X---|X---|X---|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|X-XX|X-XX|XXX-|--X-|X-XX|X-XX|X-X-|--X-|

Snare

|1---|2---|3---|4---|5---|6---|7---|8---|
|X---|X--X|-X-X|X---|X--X|X--X|----|----|

Djembe

|1---|2---|3---|4---|5---|6---|7---|8---|
|OOO-|S---|--tS|-SOO|O-tt|-St-|tt-S|t---|

k-2-bass

Bottom Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|OOO-|X---|X---|X-OO|O---|X---|X---|X---|

Mid Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|OOO-|X---|X---|X-OO|O---|X---|X---|X---|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

k-2-snare

Bottom Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Mid Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare

|1---|2---|3---|4---|5---|6---|7---|8---|
|X---|X--X|-X-X|X---|X--X|X--X|----|----|

Djembe

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

k-2-djembe

Bottom Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Mid Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe

|1---|2---|3---|4---|5---|6---|7---|8---|
|OOO-|S---|--tS|-SOO|O-tt|-St-|tt-S|t---|

k-2-shaker

Bottom Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Mid Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|X-XX|X-XX|XXX-|--X-|X-XX|X-XX|X-X-|--X-|

Snare

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

lightbulb

Bottom Bass

|1-----------|2-----------|3-----------|4-----------|
|O--O--O--O--|O-----------|------------|O---O---O---|

Mid Bass

|1-----------|2-----------|3-----------|4-----------|
|------------|------------|------------|------------|

Shaker

|1-----------|2-----------|3-----------|4-----------|
|------------|------------|------------|------------|

Snare

|1-----------|2-----------|3-----------|4-----------|
|------------|------------|X-----------|------------|

Djembe

|1-----------|2-----------|3-----------|4-----------|
|------------|------------|------------|------------|

break

Bottom Bass

|1-|2-|3-|4-|
|--|--|--|OO|

Mid Bass

|1-|2-|3-|4-|
|--|--|--|--|

Shaker

|1-|2-|3-|4-|
|-X|X-|XX|-X|

Snare

|1-|2-|3-|4-|
|-X|X-|XX|-X|

Djembe

|1-|2-|3-|4-|
|-t|t-|tt|-t|

squash

Bottom Bass

|1|2|3|4|
|O|O|O|O|

Mid Bass

|1|2|3|4|
|-|-|-|-|

Shaker

|1|2|3|4|
|X|X|X|X|

Snare

|1|2|3|4|
|X|X|X|X|

Djembe

|1|2|3|4|
|O|O|O|O|

"
`;

exports[`notation separate garlic 1`] = `
"===== 2mG =====

Stick

|1|2|3|4|
|-|-|-|-|

Kick

|1|2|3|4|
|-|-|-|-|

Stick

|1|2|3|4|
|-|-|-|-|

Stick

|1|2|3|4|
|-|-|-|-|

Kick

|1|2|3|4|
|-|-|-|-|

tom02

|1|2|3|4|
|-|-|-|-|

Snare Jazz

|1|2|3|4|
|-|-|-|-|

Snare 1

|1|2|3|4|
|-|-|-|-|

Djembe4 Slap

|1|2|3|4|
|-|-|-|-|

Djembe4 Tone

|1|2|3|4|
|-|-|-|-|

Djembe4 Bass

|1|2|3|4|
|-|-|-|-|

Shaker

|1|2|3|4|
|-|-|-|-|

Shaker

|1|2|3|4|
|-|-|-|-|

1-a

Stick

|1-|2-|3-|4-|5-|6-|7-|
|X-|-X|-X|-X|X-|X-|X-|

Kick

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Stick

|1-|2-|3-|4-|5-|6-|7-|
|--|X-|-X|-X|--|--|--|

Stick

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Kick

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

tom02

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Snare Jazz

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Snare 1

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Djembe4 Slap

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Djembe4 Tone

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Djembe4 Bass

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Shaker

|1-|2-|3-|4-|5-|6-|7-|
|--|X-|--|-X|-X|-X|X-|

Shaker

|1-|2-|3-|4-|5-|6-|7-|
|X-|--|X-|--|--|--|-X|

1-b

Stick

|1-|2-|3-|4-|5-|6-|7-|
|X-|-X|--|X-|-X|X-|X-|

Kick

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Stick

|1-|2-|3-|4-|5-|6-|7-|
|--|X-|-X|-X|-X|X-|-X|

Stick

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Kick

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

tom02

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Snare Jazz

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Snare 1

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Djembe4 Slap

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Djembe4 Tone

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Djembe4 Bass

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Shaker

|1-|2-|3-|4-|5-|6-|7-|
|-X|X-|--|--|--|-X|X-|

Shaker

|1-|2-|3-|4-|5-|6-|7-|
|X-|-X|-X|-X|--|--|-X|

2

Stick

|1-|2-|3-|4-|5-|6-|7-|8-|9-|0-|1-|2-|3-|4-|
|XX|-X|X-|--|X-|-X|--|X-|XX|X-|--|X-|-X|--|

Kick

|1-|2-|3-|4-|5-|6-|7-|8-|9-|0-|1-|2-|3-|4-|
|--|--|--|--|--|--|--|--|--|--|--|--|--|--|

Stick

|1-|2-|3-|4-|5-|6-|7-|8-|9-|0-|1-|2-|3-|4-|
|--|X-|--|X-|--|X-|XX|--|X-|--|X-|--|X-|XX|

Stick

|1-|2-|3-|4-|5-|6-|7-|8-|9-|0-|1-|2-|3-|4-|
|--|--|--|--|--|--|--|--|--|--|--|--|--|--|

Kick

|1-|2-|3-|4-|5-|6-|7-|8-|9-|0-|1-|2-|3-|4-|
|--|--|--|--|--|--|--|--|--|--|--|--|--|--|

tom02

|1-|2-|3-|4-|5-|6-|7-|8-|9-|0-|1-|2-|3-|4-|
|--|--|--|--|--|--|--|--|--|--|--|--|--|--|

Snare Jazz

|1-|2-|3-|4-|5-|6-|7-|8-|9-|0-|1-|2-|3-|4-|
|--|--|--|--|--|--|--|--|--|--|--|--|--|--|

Snare 1

|1-|2-|3-|4-|5-|6-|7-|8-|9-|0-|1-|2-|3-|4-|
|--|--|--|--|--|--|--|--|--|--|--|--|--|--|

Djembe4 Slap

|1-|2-|3-|4-|5-|6-|7-|8-|9-|0-|1-|2-|3-|4-|
|--|--|--|--|--|--|--|--|--|--|--|--|--|--|

Djembe4 Tone

|1-|2-|3-|4-|5-|6-|7-|8-|9-|0-|1-|2-|3-|4-|
|--|--|--|--|--|--|--|--|--|--|--|--|--|--|

Djembe4 Bass

|1-|2-|3-|4-|5-|6-|7-|8-|9-|0-|1-|2-|3-|4-|
|--|X-|-X|--|--|X-|X-|--|X-|-X|--|--|X-|X-|

Shaker

|1-|2-|3-|4-|5-|6-|7-|8-|9-|0-|1-|2-|3-|4-|
|-X|--|X-|--|-X|--|--|-X|--|X-|--|-X|--|--|

Shaker

|1-|2-|3-|4-|5-|6-|7-|8-|9-|0-|1-|2-|3-|4-|
|X-|-X|--|--|X-|-X|--|X-|-X|--|--|X-|-X|--|

Acropolice

Stick

|1-|2-|3-|4-|5-|6-|7-|
|X-|X-|--|X-|X-|--|--|

Kick

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Stick

|1-|2-|3-|4-|5-|6-|7-|
|X-|-X|-X|--|--|X-|--|

Stick

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Kick

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

tom02

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Snare Jazz

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Snare 1

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Djembe4 Slap

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Djembe4 Tone

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Djembe4 Bass

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Shaker

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Shaker

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

break1-v2

Stick

|1-|2-|3-|4-|5-|6-|7-|
|X-|-X|--|X-|-X|--|X-|

Kick

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Stick

|1-|2-|3-|4-|5-|6-|7-|
|--|X-|-X|--|X-|-X|-X|

Stick

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Kick

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

tom02

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Snare Jazz

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Snare 1

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Djembe4 Slap

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Djembe4 Tone

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Djembe4 Bass

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Shaker

|1-|2-|3-|4-|5-|6-|7-|
|--|X-|-X|--|X-|-X|-X|

Shaker

|1-|2-|3-|4-|5-|6-|7-|
|X-|-X|--|X-|-X|--|X-|

break2

Stick

|1-|2-|3-|4-|5-|6-|7-|
|XX|-X|X-|XX|-X|X-|XX|

Kick

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Stick

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Stick

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Kick

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

tom02

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Snare Jazz

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Snare 1

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Djembe4 Slap

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Djembe4 Tone

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Djembe4 Bass

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Shaker

|1-|2-|3-|4-|5-|6-|7-|
|--|--|--|--|--|--|--|

Shaker

|1-|2-|3-|4-|5-|6-|7-|
|XX|-X|X-|XX|-X|X-|XX|

"
`;

exports[`notation separate kuva 1`] = `
"= kivakovakivikuva =

Stick

|1|2|3|4|
|-|-|-|-|

Kick

|1|2|3|4|
|-|-|-|-|

Stick

|1|2|3|4|
|-|-|-|-|

Stick

|1|2|3|4|
|-|-|-|-|

Kick

|1|2|3|4|
|-|-|-|-|

tom02

|1|2|3|4|
|-|-|-|-|

Snare Jazz

|1|2|3|4|
|-|-|-|-|

Snare 1

|1|2|3|4|
|-|-|-|-|

Djembe4 Slap

|1|2|3|4|
|-|-|-|-|

Djembe4 Tone

|1|2|3|4|
|-|-|-|-|

Djembe4 Bass

|1|2|3|4|
|-|-|-|-|

Shaker

|1|2|3|4|
|-|-|-|-|

Shaker

|1|2|3|4|
|-|-|-|-|

k-1

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|X-X-|-X--|----|----|X-X-|-X--|X--X|----|

Kick

|1---|2---|3---|4---|5---|6---|7---|8---|
|X-X-|X-X-|X---|----|X-X-|X---|--X-|--X-|

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|--X-|X---|----|X--X|--X-|X-X-|----|X-XX|

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Kick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

tom02

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare Jazz

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare 1

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Slap

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Tone

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|--X-|----|----|----|----|----|--X-|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|X-XX|X---|----|----|X---|X--X|--X-|----|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|--X-|X---|--X-|-X--|X--X|----|

fast-offs

Stick

|1-|2-|3-|4-|5-|6-|7-|8-|
|--|--|--|--|--|--|--|--|

Kick

|1-|2-|3-|4-|5-|6-|7-|8-|
|--|--|--|--|--|--|--|--|

Stick

|1-|2-|3-|4-|5-|6-|7-|8-|
|-X|-X|-X|-X|-X|-X|-X|-X|

Stick

|1-|2-|3-|4-|5-|6-|7-|8-|
|--|--|--|--|--|--|--|--|

Kick

|1-|2-|3-|4-|5-|6-|7-|8-|
|--|--|--|--|--|--|--|--|

tom02

|1-|2-|3-|4-|5-|6-|7-|8-|
|--|--|--|--|--|--|--|--|

Snare Jazz

|1-|2-|3-|4-|5-|6-|7-|8-|
|--|--|--|--|--|--|--|--|

Snare 1

|1-|2-|3-|4-|5-|6-|7-|8-|
|--|--|--|--|--|--|--|--|

Djembe4 Slap

|1-|2-|3-|4-|5-|6-|7-|8-|
|--|--|--|--|--|--|--|--|

Djembe4 Tone

|1-|2-|3-|4-|5-|6-|7-|8-|
|--|--|--|--|--|--|--|--|

Djembe4 Bass

|1-|2-|3-|4-|5-|6-|7-|8-|
|--|--|--|--|--|--|--|--|

Shaker

|1-|2-|3-|4-|5-|6-|7-|8-|
|--|--|--|--|--|--|--|--|

Shaker

|1-|2-|3-|4-|5-|6-|7-|8-|
|--|--|--|--|--|--|--|--|

slow offs

Stick

|1|2|3|4|5|6|7|8|
|-|-|-|-|-|-|-|-|

Kick

|1|2|3|4|5|6|7|8|
|-|-|-|-|-|-|-|-|

Stick

|1|2|3|4|5|6|7|8|
|-|X|-|X|-|X|-|X|

Stick

|1|2|3|4|5|6|7|8|
|-|-|-|-|-|-|-|-|

Kick

|1|2|3|4|5|6|7|8|
|-|-|-|-|-|-|-|-|

tom02

|1|2|3|4|5|6|7|8|
|-|-|-|-|-|-|-|-|

Snare Jazz

|1|2|3|4|5|6|7|8|
|-|-|-|-|-|-|-|-|

Snare 1

|1|2|3|4|5|6|7|8|
|-|-|-|-|-|-|-|-|

Djembe4 Slap

|1|2|3|4|5|6|7|8|
|-|-|-|-|-|-|-|-|

Djembe4 Tone

|1|2|3|4|5|6|7|8|
|-|-|-|-|-|-|-|-|

Djembe4 Bass

|1|2|3|4|5|6|7|8|
|-|-|-|-|-|-|-|-|

Shaker

|1|2|3|4|5|6|7|8|
|-|-|-|-|-|-|-|-|

Shaker

|1|2|3|4|5|6|7|8|
|-|-|-|-|-|-|-|-|

k-1-bass

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|X-X-|-X--|----|----|X-X-|-X--|X--X|----|

Kick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Kick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

tom02

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare Jazz

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare 1

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Slap

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Tone

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

k-1-midbass

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Kick

|1---|2---|3---|4---|5---|6---|7---|8---|
|X-X-|X-X-|X---|----|X-X-|X---|--X-|--X-|

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Kick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

tom02

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare Jazz

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare 1

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Slap

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Tone

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

k-1-sn

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Kick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|--X-|X---|----|X--X|--X-|X-X-|----|X-XX|

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Kick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

tom02

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare Jazz

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare 1

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Slap

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Tone

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

k-1-djembe

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Kick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Kick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

tom02

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare Jazz

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare 1

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Slap

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Tone

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|--X-|----|----|----|----|----|--X-|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|X-XX|X---|----|----|X---|X--X|--X-|----|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|--X-|X---|--X-|-X--|X--X|----|

k-1-shaker

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Kick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Kick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

tom02

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare Jazz

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare 1

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Slap

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Tone

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

k-2

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|XXX-|----|----|--XX|X---|----|----|----|

Kick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|X---|X---|X---|----|X---|X---|X---|

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|X---|X--X|-X-X|X---|X--X|X--X|----|----|

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Kick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

tom02

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare Jazz

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare 1

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Slap

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Tone

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|X---|---X|-X--|----|-X--|---X|----|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|--X-|----|--XX|--X-|XX--|X---|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|XXX-|----|----|--XX|X---|----|----|----|

k-2-bass

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|XXX-|----|----|--XX|X---|----|----|----|

Kick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|X---|X---|X---|----|X---|X---|X---|

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Kick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

tom02

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare Jazz

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare 1

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Slap

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Tone

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

k-2-snare

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Kick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|X---|X--X|-X-X|X---|X--X|X--X|----|----|

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Kick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

tom02

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare Jazz

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare 1

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Slap

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Tone

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

k-2-djembe

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Kick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Kick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

tom02

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare Jazz

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare 1

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Slap

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Tone

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|X---|---X|-X--|----|-X--|---X|----|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|--X-|----|--XX|--X-|XX--|X---|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|XXX-|----|----|--XX|X---|----|----|----|

k-2-shaker

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Kick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Stick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Kick

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

tom02

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare Jazz

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Snare 1

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Slap

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Tone

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Djembe4 Bass

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

Shaker

|1---|2---|3---|4---|5---|6---|7---|8---|
|----|----|----|----|----|----|----|----|

lightbulb

Stick

|1-----------|2-----------|3-----------|4-----------|
|X--X--X--X--|X-----------|------------|X---X---X---|

Kick

|1-----------|2-----------|3-----------|4-----------|
|------------|------------|------------|------------|

Stick

|1-----------|2-----------|3-----------|4-----------|
|------------|------------|X-----------|------------|

Stick

|1-----------|2-----------|3-----------|4-----------|
|------------|------------|------------|------------|

Kick

|1-----------|2-----------|3-----------|4-----------|
|------------|------------|------------|------------|

tom02

|1-----------|2-----------|3-----------|4-----------|
|------------|------------|------------|------------|

Snare Jazz

|1-----------|2-----------|3-----------|4-----------|
|------------|------------|------------|------------|

Snare 1

|1-----------|2-----------|3-----------|4-----------|
|------------|------------|------------|------------|

Djembe4 Slap

|1-----------|2-----------|3-----------|4-----------|
|------------|------------|------------|------------|

Djembe4 Tone

|1-----------|2-----------|3-----------|4-----------|
|------------|------------|------------|------------|

Djembe4 Bass

|1-----------|2-----------|3-----------|4-----------|
|------------|------------|------------|------------|

Shaker

|1-----------|2-----------|3-----------|4-----------|
|------------|------------|------------|------------|

Shaker

|1-----------|2-----------|3-----------|4-----------|
|------------|------------|------------|------------|

break

Stick

|1-|2-|3-|4-|
|--|--|--|XX|

Kick

|1-|2-|3-|4-|
|--|--|--|--|

Stick

|1-|2-|3-|4-|
|-X|X-|XX|-X|

Stick

|1-|2-|3-|4-|
|--|--|--|--|

Kick

|1-|2-|3-|4-|
|--|--|--|--|

tom02

|1-|2-|3-|4-|
|--|--|--|--|

Snare Jazz

|1-|2-|3-|4-|
|--|--|--|--|

Snare 1

|1-|2-|3-|4-|
|--|--|--|--|

Djembe4 Slap

|1-|2-|3-|4-|
|--|--|--|--|

Djembe4 Tone

|1-|2-|3-|4-|
|--|--|--|--|

Djembe4 Bass

|1-|2-|3-|4-|
|--|--|--|--|

Shaker

|1-|2-|3-|4-|
|-X|X-|XX|-X|

Shaker

|1-|2-|3-|4-|
|--|--|--|--|

squash

Stick

|1|2|3|4|
|X|X|X|X|

Kick

|1|2|3|4|
|-|-|-|-|

Stick

|1|2|3|4|
|X|X|X|X|

Stick

|1|2|3|4|
|-|-|-|-|

Kick

|1|2|3|4|
|-|-|-|-|

tom02

|1|2|3|4|
|-|-|-|-|

Snare Jazz

|1|2|3|4|
|-|-|-|-|

Snare 1

|1|2|3|4|
|-|-|-|-|

Djembe4 Slap

|1|2|3|4|
|-|-|-|-|

Djembe4 Tone

|1|2|3|4|
|-|-|-|-|

Djembe4 Bass

|1|2|3|4|
|-|-|-|-|

Shaker

|1|2|3|4|
|-|-|-|-|

Shaker

|1|2|3|4|
|X|X|X|X|

"
`;

exports[`notation that_guy 1`] = `
"Pattern 1 inverse A

Bottom Bass 

|1---|2---|3---|4---|5---|6---|
|O---|--X-|-O--|---O|-O-O|-O-O|

Mid Bass

|1---|2---|3---|4---|5---|6---|
|O-O-|-OX-|----|---O|-O-O|-O-O|

Djembe

|1---|2---|3---|4---|5---|6---|
|O-SO|-S--|OS--|O---|--tt|tttt|

Shaker

|1---|2---|3---|4---|5---|6---|
|X--X|-XX-|-X-X|---X|--XX|XX-X|

Snare

|1---|2---|3---|4---|5---|6---|
|--XX|----|-X--|----|---X|-X-X|

Pattern 1 inverse B#2

Bottom Bass 

|1---|2---|3---|4---|5---|6---|
|O---|--X-|----|----|--XO|-O-O|

Mid Bass

|1---|2---|3---|4---|5---|6---|
|O-O-|-OX-|----|----|--XO|-O-O|

Djembe

|1---|2---|3---|4---|5---|6---|
|O-SO|-S--|tS--|---O|-St-|tttt|

Shaker

|1---|2---|3---|4---|5---|6---|
|X--X|-XX-|-X-X|--XX|--XX|XXXX|

Snare

|1---|2---|3---|4---|5---|6---|
|--XX|----|----|----|-X-X|-X-X|

Pattern 1 inverse B

Bottom Bass 

|1---|2---|3---|4---|5---|6---|
|O---|--X-|-O--|----|---O|-O-O|

Mid Bass

|1---|2---|3---|4---|5---|6---|
|O-O-|-OX-|----|----|---O|-O-O|

Djembe

|1---|2---|3---|4---|5---|6---|
|O-SO|-S--|OS--|---O|-Stt|tttt|

Shaker

|1---|2---|3---|4---|5---|6---|
|X--X|-XX-|-X-X|--XX|--XX|XX-X|

Snare

|1---|2---|3---|4---|5---|6---|
|--XX|----|-X--|----|-X-X|-X-X|

Pattern 2#2 A

Bottom Bass 

|1---|2---|3---|4---|5---|6---|
|O-O-|O-X-|---O|O---|--O-|O-O-|

Mid Bass

|1---|2---|3---|4---|5---|6---|
|O---|-OO-|---O|XO-O|--O-|O-OO|

Djembe

|1---|2---|3---|4---|5---|6---|
|O-O-|O-S-|----|O-O-|OSO-|O-SS|

Shaker

|1---|2---|3---|4---|5---|6---|
|XXXX|XXXX|XXXX|XXXX|XXXX|XXXX|

Snare

|1---|2---|3---|4---|5---|6---|
|----|XX--|--XX|--X-|X--X|-X-X|

Pattern 2#3 A

Bottom Bass 

|1---|2---|3---|4---|5---|6---|
|O-O-|O-X-|---O|XO-O|-OXO|-O-O|

Mid Bass

|1---|2---|3---|4---|5---|6---|
|O---|-OO-|----|O---|--O-|---O|

Djembe

|1---|2---|3---|4---|5---|6---|
|O-O-|O-S-|---O|SO-O|-SO-|O-SS|

Shaker

|1---|2---|3---|4---|5---|6---|
|XXXX|XXXX|XXXX|XXXX|XXXX|XXXX|

Snare

|1---|2---|3---|4---|5---|6---|
|----|XX--|--X-|X-XX|---X|-X-X|

Pattern 2#2 B

Bottom Bass 

|1---|2---|3---|4---|5---|6---|
|O-O-|O-X-|---O|O---|--O-|O-O-|

Mid Bass

|1---|2---|3---|4---|5---|6---|
|O---|-OO-|---O|XO-O|--O-|--OO|

Djembe

|1---|2---|3---|4---|5---|6---|
|O-O-|O-S-|---O|S-tO|-Ott|tS-S|

Shaker

|1---|2---|3---|4---|5---|6---|
|XXXX|XXXX|XXXX|XXXX|XXXX|XXXX|

Snare

|1---|2---|3---|4---|5---|6---|
|----|XX--|--XX|----|X--X|-X-X|

Pattern 2#2 C

Bottom Bass 

|1---|2---|3---|4---|5---|6---|
|O-O-|O-X-|---O|O---|--O-|O---|

Mid Bass

|1---|2---|3---|4---|5---|6---|
|O---|-OO-|---O|XO-O|--O-|----|

Djembe

|1---|2---|3---|4---|5---|6---|
|O-O-|O-S-|---O|S-tO|-Ott|tS--|

Shaker

|1---|2---|3---|4---|5---|6---|
|XXXX|XXXX|XXXX|XXXX|XXXX|XXXX|

Snare

|1---|2---|3---|4---|5---|6---|
|----|XX--|--XX|----|X--X|-X--|

Break? 1

Bottom Bass 

|1---|2---|3---|4---|5---|6---|
|O-XO|-X--|-O-X|O-X-|-OO-|OOXX|

Mid Bass

|1---|2---|3---|4---|5---|6---|
|O-XO|-X--|-O-X|O-X-|-OO-|OOXX|

Djembe

|1---|2---|3---|4---|5---|6---|
|O-SO|-S--|-O-S|O-S-|-OO-|SSSS|

Shaker

|1---|2---|3---|4---|5---|6---|
|--X-|-X--|---X|--X-|----|XXXX|

Snare

|1---|2---|3---|4---|5---|6---|
|--X-|-X--|---X|--X-|----|XXXX|

Break? 2

Bottom Bass 

|1---|2---|3---|4---|5---|6---|
|O-O-|OX--|O-O-|OX--|O-O-|X---|

Mid Bass

|1---|2---|3---|4---|5---|6---|
|O-O-|OX--|O-O-|OX--|O-O-|X---|

Djembe

|1---|2---|3---|4---|5---|6---|
|O-O-|Ot--|O-O-|Ot--|O-O-|Sttt|

Shaker

|1---|2---|3---|4---|5---|6---|
|X-X-|XX--|X-X-|XX--|X-X-|X---|

Snare

|1---|2---|3---|4---|5---|6---|
|X-X-|XX--|X-X-|XX--|X-X-|X---|

Pattern 1

Bottom Bass 

|1---|2---|3---|4---|5---|6---|
|O-OO|----|-X--|O---|--O-|O-O-|

Mid Bass

|1---|2---|3---|4---|5---|6---|
|O-OO|-O--|OX--|----|--O-|O-O-|

Djembe

|1---|2---|3---|4---|5---|6---|
|tttO|-SO-|S--O|S--O|----|-ttt|

Shaker

|1---|2---|3---|4---|5---|6---|
|X-XX|--X-|XX--|X-X-|--X-|-XXX|

Snare

|1---|2---|3---|4---|5---|6---|
|X-X-|-XX-|---X|X---|----|--X-|

Pattern 1b

Bottom Bass 

|1---|2---|3---|4---|5---|6---|
|O-OO|----|OX--|---X|----|-O-O|

Mid Bass

|1---|2---|3---|4---|5---|6---|
|O-OO|-O--|OO--|---X|----|OO-O|

Djembe

|1---|2---|3---|4---|5---|6---|
|tttO|-SO-|S--O|S---|--O-|Sttt|

Shaker

|1---|2---|3---|4---|5---|6---|
|X-XX|--X-|XX--|X-X-|--X-|-XXX|

Snare

|1---|2---|3---|4---|5---|6---|
|X-X-|-XX-|---X|XX--|----|X-X-|

Pattern 2

Bottom Bass 

|1---|2---|3---|4---|5---|6---|
|O-O-|O-X-|---O|O---|--O-|O-O-|

Mid Bass

|1---|2---|3---|4---|5---|6---|
|O---|-OO-|---O|XO-O|----|-O-O|

Djembe

|1---|2---|3---|4---|5---|6---|
|O-O-|O-O-|----|O-SO|-SOO|SS-S|

Shaker

|1---|2---|3---|4---|5---|6---|
|X-XX|-XXX|-X-X|X-XX|-XX-|X-XX|

Snare

|1---|2---|3---|4---|5---|6---|
|----|XX--|---X|----|---X|-X-X|

End bit

Bottom Bass 

|1---|2---|3---|4---|5---|6---|
|----|----|----|----|----|----|

Mid Bass

|1---|2---|3---|4---|5---|6---|
|----|----|----|----|----|----|

Djembe

|1---|2---|3---|4---|5---|6---|
|ttt-|----|----|----|----|----|

Shaker

|1---|2---|3---|4---|5---|6---|
|----|----|----|----|----|----|

Snare

|1---|2---|3---|4---|5---|6---|
|----|----|----|----|----|----|

Djembe 1 Others 2

Bottom Bass 

|1---|2---|3---|4---|5---|6---|
|O-O-|O-X-|---O|XO-O|-OXO|-O-O|

Mid Bass

|1---|2---|3---|4---|5---|6---|
|O---|-OO-|O---|O---|--O-|---O|

Djembe

|1---|2---|3---|4---|5---|6---|
|O-SO|-S--|OS--|O---|--tt|tttt|

Shaker

|1---|2---|3---|4---|5---|6---|
|XXXX|XXXX|XXXX|XXXX|XXXX|XXXX|

Snare

|1---|2---|3---|4---|5---|6---|
|----|XX--|--XX|--X-|---X|-X-X|

"
`;
